--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,36 +14,35 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
     "babel-jest": "^24.8.0",
     "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^3.0.0",
-    "enzyme": "^3.4.1",
-    "enzyme-adapter-react-16": "^1.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^4.0.0-beta.5",
+    "install": "^0.12.2",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^24.8.0",
+    "npm": "^6.9.0",
     "style-loader": "^0.21.0",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.3"
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "jsonwebtoken": "^8.3.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2"
-  },
-  "babel": {
-    "presets": [
-      "env",
-      "react"
-    ]
+    "babel-core": "7.0.0-bridge.0",
+    "jsonwebtoken": "^8.5.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "jest": {
     "setupFiles": [
