--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,8 +41,10 @@
     "axios": "^0.19.0",
     "babel-core": "7.0.0-bridge.0",
     "jsonwebtoken": "^8.5.1",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "sass-loader": "^7.1.0"
   },
   "jest": {
     "setupFiles": [
