--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -5,6 +5,9 @@
     ],
     "plugins": [
       "@babel/plugin-proposal-class-properties",
-      "@babel/plugin-proposal-object-rest-spread"
+      "@babel/plugin-proposal-object-rest-spread",
+      "@babel/plugin-transform-regenerator",
+      "@babel/plugin-transform-runtime",
+      "@babel/plugin-proposal-async-generator-functions"
     ]
 }
